# Notes_App

./: .env  .flake8  .gitignore  CHANGELOG.md  README.md  dev_requirements.txt  env.example  mypy.ini  pyproject.toml  pytest.ini
docs/: README.md
docs/api/: endpoints.md  troubleshooting.md
docs/architecture-patterns/: clean-architecture.md  dependency-injection.md  repository-pattern.md  restful-api-design.md  service-layer.md
docs/clean-code/: error-handling.md  input-validation.md  type-safe-development.md
docs/design-principles/: abstractions-interfaces.md  code-organization.md  solid-principles.md
docs/developer_guidelines/: code_standards.md  database_setup.md  getting_started.md  quick_reference.md  structured-logging-implementation.md  virtual_environment_setup.md
docs/features/: api-endpoints.md  database-features.md  enhanced-logging.md  error-handling.md  note-management.md  user-authentication.md
docs/testing/: TEST_ISOLATION_IMPLEMENTATION.md  coverage-report.md  enhanced-logging-testing-guide.md  integration-testing.md  performance-testing.md  test-data-management.md  test-isolation-guide.md  test-structure-guide.md  testing-best-practices.md  testing-guide.md  testing-overview.md
migrations/: env.py  migration_handler.py
migrations/migrations/: env.py
migrations/migrations/versions/: 44a2381228ed_initial_migration.py  a44ff7511409_add_user_and_note_tables.py
requirements/: requirements.txt
scripts/: validate_test_isolation.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  admin_router.py  logging_router.py  notes_router.py  user_router.py
src/core/: __init__.py  auth_bypass.py  config.py  database.py  error_handler.py  exceptions.py  logging.py  logging_utils.py  middleware.py  secrets_loader.py  validation.py
src/models/: __init__.py  note.py  user.py
src/repositories/: __init__.py  note_repository.py  user_repository.py
src/schemas/: __init__.py  note.py  user.py
src/services/: __init__.py  authentication.py  note_management.py
tests/: __init__.py  conftest.py  requirements-test.txt
tests/api/: __init__.py  test_admin_router.py  test_auth.py  test_notes.py
tests/unit/: __init__.py  test_admin_router.py  test_auth_bypass.py  test_auth_service.py  test_config.py  test_core_functionality.py  test_database.py  test_error_handler.py  test_exceptions.py  test_logging.py  test_logging_router.py  test_logging_utils.py  test_middleware.py  test_middleware_extended.py  test_models.py  test_note_repository.py  test_schemas.py  test_secrets_loader.py  test_user_repository.py  test_validation.py
tests/utils/: test_helpers.py
